$Id: ChangeLog,v 1.58 2008/06/19 19:00:00 stewy Exp $

ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html

MaKL xxx
	- support for static library dependencies
	- explicit 'distclean' target (and related DISTCLEANFILES variable) added
	  to all mk templates
	- makl_checkheader: new arg to specify any header file to include before
	  the one we're looking for
	- subdir template rewrite
	- installed makl commands can be {pre,suf}fixed via --script_{pre,suf}fix 
	  configure arguments
	- added PROG_{PRE,POST}FIX and SCRIPT_{PRE,POST}FIX variables to modify
	  the built/installed program/script name
	- small refactoring of lib.mk and prog.mk templates
	- add assert-var function to test variables before use
	- fix toolchain hardcoding error in configure

MaKL 1.7.1
	- fix usage of toolchain variables from configure scripts 

MaKL 1.7.0
	- added new DISTRECIPE var to dist.mk template to load dist objects from
	  an external file (can be mixed with DISTFILES and DISTREMAP)
	- fix in multiple word representation of header macros
	- do linking also for cross-compilation
	- multi-valued XENO_PATCH_URI and XENO_PATCH_FILE variables in xeno.mk
	- added XENO_FETCH_MULTI_URI to xeno-fetch.mk to allow download of multiple
	  different tarballs'
	- 'makl-new dist' command produces Makefile.dist instead of Makefile

MaKL 1.6.0
	- all makl* commands also exist in makl-* fashion, which is the preferred
	  syntax from now on
	- added maklnew (makl-new) command to create Makefile's from templates
	- added .help target to all .mk to document the available variables and 
	  targets
	- makl_compile doesn't link when cross compiling
	- added makltc (makl-tc) command to ease the creation of cross compilation 
	  environment
	- makl_checkstructelem added to check a specific element in a struct
	- makl_checksymbol added to check for #defines, variables or functions
	- explicit cygwin toolchain (default.tc would fit anyway)