@@ -1,8 +1,11 @@
-$Id: ChangeLog,v 1.58 2008/06/19 19:00:00 stewy Exp $
+$Id: ChangeLog,v 1.59 2008/06/24 16:00:20 tho Exp $
 
 ChangeLog file of MaKL - http://www.koanlogic.com/makl/changelog.html
 
 MaKL xxx
+	- NO_LY_AUTODEP added to explicitly disable lex/yacc autodep features
+	- EXTRA_OBJS added to extend the list of objects that build a program
+	  and/or library (e.g. those generated by lex/yacc).
 	- support for static library dependencies
 	- explicit 'distclean' target (and related DISTCLEANFILES variable) added
 	  to all mk templates
